implemented colorway to login page

--- a/client/src/comp/LogIn/Login.css
+++ b/client/src/comp/LogIn/Login.css
@@ -1,13 +1,38 @@
 .btn-xl {
-<<<<<<< HEAD
   margin-right: 1rem;
-}
-=======
-    margin-right: 1rem;
 }
 
 .login-card {
-    margin-top: 10rem;
-    margin-bottom: auto;
+  margin-top: 10rem;
+  margin-bottom: auto;
 }
->>>>>>> 0747aefd55d0d4f563f44541c945a1371de06a5b
+
+div {
+  background-color: rgb(4, 21, 31);
+}
+
+.card-body {
+  background-color: rgb(24, 58, 55);
+}
+
+.form-group {
+  background-color: rgb(24, 58, 55);
+}
+
+.form-label {
+  background-color: rgb(24, 58, 55);
+  color: rgb(196, 73, 0);
+}
+
+#formBasicEmail {
+  background: white;
+}
+
+#formBasicPassword {
+  background: white;
+}
+
+.btn-primary.btn-xl {
+  background-color: rgb(196, 73, 0);
+  color: white;
+}
