--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+#root {
+  height: 100vh;
+}
+
 .App {
   text-align: center;
 }
@@ -19,6 +23,10 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
