Added Google Maps and Places functionality.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 #root {
   height: 100vh;
+  background-color: rgb(4, 21, 31);
 }
 
 .App {
@@ -29,4 +30,24 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.main-wrapper {
+  height: 40vh;
+  margin: 10px 50px;
+  filter: drop-shadow(-1px 5px 3px #ccc);
+}
+.info-wrapper {
+  margin-top: 15px;
+}
+.map-details {
+  text-align: center;
+  font-size: 1.2em;
+}
+.map-details span {
+  font-weight: bold;
+}
+.search-input {
+  font-size: 1.2em;
+  width: 80%;
 }
