--- a/client/src/comp/LogIn/Login.css
+++ b/client/src/comp/LogIn/Login.css
@@ -7,9 +7,9 @@
   margin-bottom: auto;
 }
 
-div {
+/* #root {
   background-color: rgb(4, 21, 31);
-}
+} */
 
 .card-body {
   background-color: rgb(24, 58, 55);
